# generic-vectorizer

./: Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  compile_grpc.sh  generate_dependencies.py  pyproject.toml  requirements.txt
embedding_server/: __main__.py
embedding_server/background_workers/: embedder.py
embedding_server/client/: __init__.py  client.py
embedding_server/grpc_server/: server.py
embedding_server/grpc_server/interfaces/: strategies_pb2.pyi
embedding_server/grpc_server/protos/: strategies.proto
embedding_server/grpc_server/servicer/: text_embedding.py
embedding_server/model_schema/: __init__.py  reranker.py
embedding_server/runner/: runner.py
embedding_server/strategies/embedding/: bge_m3.py
embedding_server/strategies/reranker/: flag_reranker.py
experiments/: config.json  processing.py
generic_vectorizer/: __init__.py  __main__.py  log.py
generic_vectorizer/background_workers/: embedder.py
generic_vectorizer/client/: __init__.py  client.py
generic_vectorizer/grpc_server/: server.py
generic_vectorizer/grpc_server/interfaces/: strategies_pb2.py  strategies_pb2.pyi  strategies_pb2_grpc.py
generic_vectorizer/grpc_server/protos/: strategies.proto
generic_vectorizer/grpc_server/servicer/: text_embedding.py
generic_vectorizer/strategies/: __init__.py  abstract_strategy.py
generic_vectorizer/typing/: __init__.py  bge_embedding.py  reranker.py
generic_vectorizer/vectorizer/: __init__.py  vectorizer.py
tests/: test_dense_sparse_embedding.py  test_model_schema.py  test_reranker.py
(+2 files in other folders)
